--- a/exam-template.html
+++ b/exam-template.html
@@ -7,24 +7,63 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #faf7f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       line-height: 1.6;
-      padding: 10px;
-      color: #2a4d69;
+      background-color: #fdf6e3; /* paper-like background */
+      color: #333;
+      margin: 0;
+      padding: 1rem;
     }
-    h1, h2 {
-      color: #2a4d69;
-    }
-    section {
+    .container {
+      max-width: 850px;
+      margin: auto;
       background: #fff;
-      padding: 15px;
-      margin-bottom: 15px;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    .back-link {
+      display: inline-block;
+      margin: 1rem 0;
+      color: #007bff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .back-link:hover {
+      text-decoration: underline;
+    }
+    .info-box {
+      background: #e8f5e9;
+      border-left: 5px solid #4caf50;
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    .warning-box {
+      background: #fff3cd;
+      border-left: 5px solid #ff9800;
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin: 1rem 0;
+    }
+    table, th, td {
+      border: 1px solid #bbb;
+    }
+    th, td {
+      padding: 8px;
+      text-align: left;
+    }
+    ul {
+      padding-left: 1.2rem;
     }
     a {
-      color: #1a73e8;
+      color: #007bff;
       text-decoration: none;
     }
     a:hover {
@@ -32,231 +71,208 @@
     }
     .cta-button {
       display: inline-block;
-      padding: 8px 12px;
-      background: #4CAF50;
-      color: #fff;
+      background: #4caf50;
+      color: white;
+      padding: 0.6rem 1rem;
+      margin: 0.5rem 0;
       border-radius: 5px;
       text-decoration: none;
-      margin-top: 10px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
     }
     .cta-button:hover {
       background: #45a049;
     }
-    ul {
-      padding-left: 1.2rem;
+    #youtube-links p {
+      margin: 0.3rem 0;
     }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      max-width: 500px;
-      margin: 10px 0;
+    footer p {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #666;
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-    }
-    th {
-      background-color: #f0f0f0;
-      text-align: left;
-    }
-    /* Responsive iframe container */
-    .video-container {
-      position: relative;
-      padding-bottom: 56.25%; /* 16:9 */
-      padding-top: 25px;
-      height: 0;
-      margin-bottom: 20px;
-    }
-    .video-container iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
+    #rural-tip {
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: 1rem;
+      font-style: italic;
     }
   </style>
 </head>
 <body>
+  <div class="container">
 
-  <div id="google_translate_element" style="text-align: right; margin-bottom: 10px;"></div>
+    <a href="class10.html" class="back-link">← Back to Class 10 Jobs</a>
 
-  <a href="class10.html" class="cta-button">← Back to Class 10 Jobs</a>
+    <!-- Google Translate -->
+    <div id="google_translate_element" style="text-align: right; margin-bottom: 20px;"></div>
+    <p style="font-size: 0.9rem; color: #555;">📢 Change the language above to read in Assamese or Hindi</p>
 
-  <h1 id="exam-title">Loading...</h1>
-  <p id="exam-subtitle"></p>
+    <h1 id="exam-title">Loading...</h1>
+    <p id="exam-subtitle"></p>
 
-  <section>
-    <h2>🔍 About</h2>
-    <div id="exam-about"></div>
-  </section>
+    <div class="info-box" id="exam-why"></div>
 
-  <section>
-    <h2>❓ Why this exam?</h2>
-    <div id="exam-why"></div>
-  </section>
+    <section>
+      <h2>🔍 About</h2>
+      <div id="exam-about"></div>
+    </section>
 
-  <section>
-    <h2>🎓 Who can apply?</h2>
-    <div id="exam-eligibility"></div>
-  </section>
+    <section>
+      <h2>🎓 Who Can Apply?</h2>
+      <div id="exam-eligibility"></div>
+    </section>
 
-  <section>
-    <h2>💼 Job roles</h2>
-    <div id="exam-roles"></div>
-  </section>
+    <section>
+      <h2>💼 Job Roles</h2>
+      <div id="exam-roles"></div>
+    </section>
 
-  <section>
-    <h2>📝 Exam pattern</h2>
-    <div id="exam-pattern"></div>
-  </section>
+    <section>
+      <h2>📝 Exam Pattern</h2>
+      <div id="exam-pattern"></div>
+    </section>
 
-  <section>
-    <h2>📅 Important dates</h2>
-    <div id="exam-dates"></div>
-  </section>
+    <section>
+      <h2>📅 Important Dates</h2>
+      <div id="exam-dates"></div>
+    </section>
 
-  <section>
-    <h2>💡 Tips</h2>
-    <div id="exam-tips"></div>
-  </section>
+    <section>
+      <h2>💡 Tips to Crack the Exam</h2>
+      <div id="exam-tips"></div>
+    </section>
 
-  <section>
-    <h2>🔗 Resources</h2>
-    <p>📄 <a id="pdf-link" href="#" target="_blank" rel="noopener noreferrer">Notification / Syllabus</a></p>
-    <p>📄 <a id="pyq-link" href="#" target="_blank" rel="noopener noreferrer">Previous Year Papers</a></p>
-    <div id="youtube-links"></div>
-  </section>
+    <div class="warning-box" id="exam-warnings"></div>
 
-  <section>
-    <h2>🌐 Official site</h2>
-    <p><a id="official-site" href="#" target="_blank" rel="noopener noreferrer">Visit Official Website</a></p>
-  </section>
+    <section>
+      <h2>🔗 Free Study Resources</h2>
+      <p>📄 <a id="pdf-link" href="#" target="_blank" rel="noopener noreferrer">Notification / Syllabus</a></p>
+      <p>📄 <a id="pyq-link" href="#" target="_blank" rel="noopener noreferrer">Previous Year Papers</a></p>
+      <div id="youtube-links"></div>
+    </section>
 
-  <section>
-    <h2>📝 How to apply</h2>
-    <p><a id="apply-link" href="#" class="cta-button" target="_blank" rel="noopener noreferrer">Apply Online</a></p>
-  </section>
+    <section>
+      <h2>🌐 Official Website</h2>
+      <p><a id="official-site" href="#" target="_blank" rel="noopener noreferrer">Visit Official Website</a></p>
+    </section>
 
-  <footer>
-    <p style="text-align:center; margin-top: 20px;">© 2025 Naukri Saathi | All resources are free & official</p>
-  </footer>
+    <section>
+      <h2>📝 How to Apply</h2>
+      <p><a id="apply-link" href="#" class="cta-button" target="_blank" rel="noopener noreferrer">Apply Online</a></p>
+    </section>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=tsv";
+    <p id="rural-tip"></p>
 
-    function getExamIdFromUrl() {
-      const params = new URLSearchParams(window.location.search);
-      return params.get("id") || "";
-    }
+    <footer>
+      <p>© 2025 Naukri Saathi | All resources are free & official</p>
+    </footer>
+  </div>
 
-    function formatList(str) {
-      if (!str) return "";
-      const items = str.split("|").map(s => s.trim()).filter(Boolean);
-      if (items.length === 0) return "";
-      return "<ul>" + items.map(i => `<li>${i}</li>`).join("") + "</ul>";
-    }
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pub?output=tsv";
 
-    function formatDates(str) {
-      if (!str) return "";
-      const parts = str.split("|").map(s => s.trim());
-      if (parts.length % 2 !== 0) return str.replace(/\|/g, "<br>"); // fallback
-
-      let rows = "";
-      for (let i = 0; i < parts.length; i += 2) {
-        rows += `<tr><td>${parts[i]}</td><td>${parts[i+1]}</td></tr>`;
+      function getExamIdFromUrl() {
+        const params = new URLSearchParams(window.location.search);
+        return params.get("id") || "";
       }
-      return `<table>
-                <thead><tr><th>Event</th><th>Date</th></tr></thead>
-                <tbody>${rows}</tbody>
-              </table>`;
-    }
 
-    function generateYouTubeEmbedHTML(youtubeData) {
-      if (!youtubeData) return "";
-      let parts = youtubeData.split("|").map(s => s.trim());
-      let html = "";
+      function parseListToUL(text) {
+        if (!text) return "";
+        let items = text.split("|").map(i => i.trim()).filter(Boolean);
+        return `<ul>${items.map(i => `<li>${i}</li>`).join("")}</ul>`;
+      }
 
-      for (let i = 0; i < parts.length; i += 3) {
-        let title = parts[i];
-        let url = parts[i+2];
-        if (title && url) {
-          if (url.includes("youtube.com/watch?v=")) {
-            const videoId = url.split("v=")[1].split("&")[0];
-            const embedUrl = `https://www.youtube.com/embed/${videoId}`;
-            html += `<div>
-                      <h4>${title}</h4>
-                      <div class="video-container">
-                        <iframe src="${embedUrl}" allowfullscreen allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
-                      </div>
-                    </div>`;
-          } else if (url.includes("youtube.com/playlist?list=")) {
-            html += `<p><strong>${title}</strong>: <a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a></p>`;
-          } else {
-            html += `<p><strong>${title}</strong>: <a href="${url}" target="_blank" rel="noopener noreferrer">${url}</a></p>`;
+      function parseDatesToTable(text) {
+        if (!text) return "";
+        let rows = text.split("|").map(row => {
+          let [event, date] = row.split(":").map(s => s.trim());
+          return `<tr><td>${event}</td><td>${date}</td></tr>`;
+        }).filter(Boolean);
+        return `<table><thead><tr><th>Event</th><th>Date</th></tr></thead><tbody>${rows.join("")}</tbody></table>`;
+      }
+
+      fetch(sheetUrl)
+        .then(res => {
+          if (!res.ok) throw new Error("Network response was not ok");
+          return res.text();
+        })
+        .then(text => {
+          let rows = text.trim().split("\n").map(r => r.split("\t"));
+          let headers = rows[0];
+          let exams = rows.slice(1);
+
+          let examId = getExamIdFromUrl();
+          if (!examId) {
+            document.getElementById("exam-title").textContent = "No exam ID provided.";
+            return;
           }
-        }
-      }
-      return html;
+
+          let exam = exams.find(r => r[0] === examId);
+          if (!exam) {
+            document.getElementById("exam-title").textContent = "Exam Not Found";
+            return;
+          }
+
+          let data = {};
+          headers.forEach((h, i) => data[h] = exam[i] || "");
+
+          document.getElementById("exam-title").textContent = data.title;
+          document.getElementById("exam-subtitle").textContent = data.subtitle;
+
+          document.getElementById("exam-why").innerHTML = parseListToUL(data.why);
+          document.getElementById("exam-about").innerHTML = data.about || "";
+          document.getElementById("exam-eligibility").innerHTML = parseListToUL(data.eligibility);
+          document.getElementById("exam-roles").innerHTML = parseListToUL(data.roles);
+          document.getElementById("exam-pattern").innerHTML = parseListToUL(data.pattern);
+          document.getElementById("exam-dates").innerHTML = parseDatesToTable(data.dates);
+          document.getElementById("exam-tips").innerHTML = parseListToUL(data.tips);
+          document.getElementById("exam-warnings").innerHTML = parseListToUL(data.warnings);
+
+          document.getElementById("pdf-link").href = data.pdf_link || "#";
+          document.getElementById("pyq-link").href = data.pyq_link || "#";
+
+          // YouTube links rendering
+          if (data.youtube) {
+            let parts = data.youtube.split("|");
+            let ytHTML = "";
+            for (let i = 0; i < parts.length; i += 3) {
+              let label = parts[i];
+              let desc = parts[i+1];
+              let url = parts[i+2];
+              if(label && url){
+                ytHTML += `<p><strong>${label}</strong>: <a href="${url}" target="_blank" rel="noopener noreferrer">${desc || url}</a></p>`;
+              }
+            }
+            document.getElementById("youtube-links").innerHTML = ytHTML;
+          }
+
+          document.getElementById("official-site").href = data.website || "#";
+          document.getElementById("apply-link").href = data.apply_link || "#";
+          document.getElementById("rural-tip").textContent = data.rural_tip || "";
+
+          // Update page title
+          document.title = data.title + " - Naukri Saathi";
+        })
+        .catch(err => {
+          console.error("Error loading exam data:", err);
+          document.getElementById("exam-title").textContent = "Failed to load exam data.";
+        });
+    });
+  </script>
+
+  <!-- Google Translate -->
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'as,hi',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
     }
-
-    fetch(sheetUrl)
-      .then(res => {
-        if (!res.ok) throw new Error("Network response was not ok");
-        return res.text();
-      })
-      .then(text => {
-        let rows = text.trim().split("\n").map(r => r.split("\t"));
-        let headers = rows[0];
-        let exams = rows.slice(1);
-
-        let examId = getExamIdFromUrl();
-        let exam = exams.find(r => r[0] === examId);
-
-        if (!exam) {
-          document.querySelector("#exam-title").textContent = "Exam Not Found";
-          return;
-        }
-
-        let data = {};
-        headers.forEach((h, i) => data[h] = exam[i] || "");
-
-        document.querySelector("#exam-title").textContent = data.title || "";
-        document.querySelector("#exam-subtitle").textContent = data.subtitle || "";
-        document.querySelector("#exam-why").innerHTML = data.why || "";
-        document.querySelector("#exam-about").innerHTML = data.about || "";
-        document.querySelector("#exam-eligibility").innerHTML = formatList(data.eligibility);
-        document.querySelector("#exam-roles").innerHTML = formatList(data.roles);
-        document.querySelector("#exam-pattern").innerHTML = formatList(data.pattern);
-        document.querySelector("#exam-dates").innerHTML = formatDates(data.dates);
-        document.querySelector("#exam-tips").innerHTML = formatList(data.tips);
-
-        document.querySelector("#pdf-link").href = data.pdf_link || "#";
-        document.querySelector("#pyq-link").href = data.pyq_link || "#";
-
-        document.querySelector("#youtube-links").innerHTML = generateYouTubeEmbedHTML(data.youtube);
-
-        document.querySelector("#official-site").href = data.website || "#";
-        document.querySelector("#apply-link").href = data.apply_link || "#";
-      })
-      .catch(err => {
-        console.error("Error loading exam data:", err);
-        document.querySelector("#exam-title").textContent = "Failed to load exam data.";
-      });
-  });
-</script>
-
-<!-- Google Translate -->
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'as,hi',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
-  }
-</script>
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
